:fire: remove room api
